force-app/main/default/objects/Comm_Template__c/Comm_Template__c.object-meta.xml
<CustomObject>
    <label>Comm Template</label>
    <nameField>
        <label>Comm Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Comm Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>