force-app/main/default/objects/Comm_Template__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Enquiry</fullName>
            </value>
            <value>
                <fullName>Proposal</fullName>
            </value>
            <value>
                <fullName>Booked</fullName>
            </value>
            <value>
                <fullName>Pre-Departure</fullName>
            </value>
            <value>
                <fullName>Travelling</fullName>
            </value>
            <value>
                <fullName>Post-Trip</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>